.metadata/.plugins/org.eclipse.cdt.ui/Lab01.build.log
16:07:05 **** Incremental Build of configuration Debug for project Lab01 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:225:1: error: expected declaration or statement at end of input
  225 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:56:13: warning: 'MPU_Config' used but never defined
   56 | static void MPU_Config(void);
      |             ^~~~~~~~~~
../Core/Src/main.c:216:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  216 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:185:6: warning: 'MPU_Config' defined but not used [-Wunused-function]
  185 | void MPU_Config(void)
      |      ^~~~~~~~~~
../Core/Src/main.c:142:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  142 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:07:05 Build Failed. 2 errors, 4 warnings. (took 360ms)

